# coderag

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  README.md  RELEASE_REVIEW_0.1.md  ROADMAP.md  biome.json  build.config.ts  lefthook.yml  package.json  sylphx.json  turbo.json  vercel.json
.changeset/: coderag-cli-in-multiarch-package.md  config.json  initial-release.md  mcp-sdk-migration.md  multiarch-native-optional-deps.md  rust-default-mcp-consumer-publish.md
.doctrine/: project.json
benchmark-artifacts/: coderag_release_gate.json
crates/coderag-cli/: Cargo.toml
crates/coderag-cli/src/: main.rs
crates/coderag-core/: Cargo.toml
crates/coderag-core/src/: doctor_status.rs  engine.rs  index.rs  lib.rs  store.rs  tokenize.rs  types.rs
crates/coderag-mcp-server/: Cargo.toml
crates/coderag-mcp-server/src/: cli_bridge.rs  codebase_search.rs  http_transport.rs  lib.rs  main.rs  tool_routes.rs
crates/coderag-mcp-server/tests/: golden_parity.rs  http_codebase_search_differential.rs  stdio_codebase_search_differential.rs
docs/: ARCHITECTURE.md  FEATURE_ANALYSIS.md  benchmark.md  index.md  package.json
examples/: basic-usage.ts  codebase-search-request.json  watch-mode.ts
fixtures/: golden-retrieval-baseline.json
scripts/: assemble-multiarch-natives.ts  benchmark-public-proof.ts  check-no-ts-codebase-search.sh  check-no-ts-http-backend.sh  check-no-ts-stdio-backend.sh  check-ts-adapter-deletion-ready.sh  release-gate.ts  run-coderag-differential.sh  stage-rust-mcp.ts  sync-platform-versions.ts  verify-multiarch-readback.ts
test/: check-differential-harness.test.ts  check-no-ts-codebase-search.test.ts  check-no-ts-http-backend.test.ts  check-no-ts-stdio-backend.test.ts  golden-retrieval.test.ts  readmeDiscovery.test.ts  retrieval-parity.test.ts  shippedPath.matrix.test.ts  stdioTransport.matrix.test.ts  tsAdapterDeletion.matrix.test.ts
verification/: coderag-2026-07-10T2130-codebase-search-stdio-differential.json  coderag-cycle43-rust-impl-batch.json  coderag-cycle47-rust-impl-batch.json  coderag-cycle50-transport-web-mcp-http-rust-impl.json  (+3 more)
(+51 files in other folders)
