[package]
name = "coderag-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust TF-IDF retrieval core for CodeRAG."

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"