[package]
name = "coderag-mcp-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-native MCP server for coderag (rmcp)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "coderag-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
coderag-core = { path = "../coderag-core" }
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }