[package]
name = "coderag-mcp-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-native MCP server for coderag (rmcp)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "coderag-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
coderag-core = { path = "../coderag-core" }
rmcp = { version = "0.16.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
ureq = "2"